test/functions/firstClassFns/captureGenericFn.good
captureGenericFn.chpl:17: error: Generic functions can't be captured as values
Note: This source location is a guess.
captureGenericFn.chpl:18: error: Generic functions can't be captured as values
Note: This source location is a guess.
captureGenericFn.chpl:19: error: Generic functions can't be captured as values
Note: This source location is a guess.
captureGenericFn.chpl:21: error: illegal access of first class function
